[package]
name = "rscalc"
version = "0.1.0"
edition = "2024"

[dependencies]
anstyle = "1.0.13"
bytemuck = "1.24.0"
eframe = "0.33.3"
egui = "0.33.3"
egui_extras = { version = "0.33.3", features = ["image"] }
egui_glow = "0.33.3"
glam = "0.30.9"
glow = "0.16.0"
image = { version = "0.25.9", features = ["png"] }
once_cell = "1.21.3"
strum = { version = "0.27.2", features = ["std", "derive", "strum_macros"] }
